chore: nettoyer repo + add all pending sources
- .gitignore: add patterns for root-level debug artifacts (*.sh, test_*.py, *.png, logs, exe, .playwright-mcp)
- feat(staff): StaffInvitation domain, service, mailer, scheduler, controllers (admin + public)
- feat(site-config): SiteConfigEntry, SiteConfigManager, SiteConfigRepository, SiteEnvironmentPostProcessor, SiteConfigAdminController
- feat(portal): ConfigController, BackendLoginController, backend-login.html
- feat(sync): ErpUserSyncMapper
- feat(frontend): admin-site-config, admin-staff-invitations, accept-invitation components
- feat(frontend): site-config-admin.service, site-config.service
- db: V29->V31 mapper_version rename, V32 staff_role, V33 staff_invitations
- bin: configure-frappe-sso.ps1
- emails: staff-invitation template
- resources: site-config.json, META-INF Spring config